<resources>
    <string name="app_name">Driving All The Way</string>
    <string name="addRide">Plan a Ride by clicking here:</string>
    <string name="PhoneText">Phone:</string>
    <string name="When">When?</string>
    <string name="WhenHours">15</string>
    <string name="WhenMins">30</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="PassDitsText">Passenger\'s Details:</string>
    <string name="NameText">Name:</string>
    <string name="EmailText">Email:</string>
    <string name="EmailEnter">Jason@gmail.com</string>
    <string name="Status">Status:</string>
    <string-array name="StatusSpinner">
        <item>available</item>
        <item>inProcess</item>
        <item>finished</item>
    </string-array>
    <string name="DoneButton">Done!</string>
    <string name="plan_a_ride_txt">TextView</string>
    <string name="credits"><![CDATA[©L&H]]></string>
</resources>
