<?xml version="1.0" encoding="utf-8"?><!--xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.TripApp">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BigLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/FirstLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/DoneButton"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_gravity="start"
            android:background="@color/transparent"
            android:contentDescription="@string/addRide"
            android:scaleType="fitCenter"
            android:src="@mipmap/rideapp_icon" />

        <TextView
            android:id="@+id/When"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/When"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:fontFamily="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="now:"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:fontFamily="serif" />

            <ImageButton
                android:id="@+id/imageButton_nowTime"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:background="@color/transparent"
                android:contentDescription="@string/When"
                android:scaleType="fitCenter"
                android:src="@mipmap/now_time_icon" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="or choose a future time:"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:fontFamily="serif" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/TimeEnter1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="1"
                    android:gravity="right|center|end"
                    android:hint="@string/WhenHours"
                    android:inputType="time"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/iconDarkGrey"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="7dp"
                    android:layout_height="match_parent"

                    app:srcCompat="@mipmap/colon_icon" />

                <EditText
                    android:id="@+id/TimeEnter2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:ems="1"
                    android:gravity="left|center|start"
                    android:hint="@string/WhenMins"
                    android:inputType="time"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/iconDarkGrey"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="Current location:"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="serif" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/location_icon" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AddressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/FromLayout"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/From"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/From"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="serif" />

                <EditText
                    android:id="@+id/FromEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/iconVeryDarkGrey"
                    android:textSize="14sp"
                    app:fontFamily="serif"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageArrow"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:contentDescription="TODO"
                android:src="@mipmap/arrowicon" />

            <LinearLayout
                android:id="@+id/ToLayout"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/To"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/To"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="serif" />

                <EditText
                    android:id="@+id/ToEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/iconVeryDarkGrey"
                    android:textSize="14sp"
                    app:fontFamily="serif"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SecondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_weight="1"
                android:src="@mipmap/infoicon" />

            <TextView
                android:id="@+id/PassDitsText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/PassDitsText"
                android:textColor="@color/colorPrimaryDark"
                app:fontFamily="serif" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/NameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/NameText"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:fontFamily="serif" />

            <EditText
                android:id="@+id/NameEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/iconVeryDarkGrey"
                android:textSize="14sp"
                app:fontFamily="serif" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/EmailAndPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/EmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:text="@string/EmailText"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="serif" />

                <EditText
                    android:id="@+id/EmailEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:hint="@string/EmailEnter"
                    android:textColorHint="@color/iconDarkGrey"
                    android:inputType="textEmailAddress"
                    app:fontFamily="serif"
                    android:textColor="@color/iconVeryDarkGrey"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PhoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/PhoneText"
                    android:textColor="@color/colorPrimaryDark"
                    app:fontFamily="serif" />

                <EditText
                    android:id="@+id/PhoneEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="10"
                    android:inputType="phone"
                    android:textColor="@color/iconVeryDarkGrey"
                    android:textSize="14sp"
                    app:fontFamily="serif" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ThirdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/StatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:prompt="@string/Status"
            android:spinnerMode="dialog" />
    </LinearLayout>
</LinearLayout>